# efficient-sm2

./: .gitignore  Cargo.toml  README.md
src/: ec.rs  elem.rs  err.rs  jacobian.rs  key.rs  lib.rs  limb.rs  norop.rs  rand.rs  sm2p256.rs  sm2p256_table.rs  sm2p256_test.rs
src/ec/: signing.rs  verification.rs
src/jacobian/: exchange.rs
src/key/: private.rs  public.rs
